new favicon, console output removed

--- a/multimap/index.html
+++ b/multimap/index.html
@@ -711,7 +711,7 @@
                 map.setZoom(maxzoom_std);
             }
 			//console.log(e.maxZoom);
-			console.log(e.name);
+			//console.log(e.name);
 
 			aktLayer= e.name;
 			set_hash();
