change to local bootstrap and glyphicon; prepare optimized primenumber function

--- a/primenumber/index.html
+++ b/primenumber/index.html
@@ -3,21 +3,30 @@
     <head>
         <meta charset="utf-8">
 	    <title>Primzahlen</title>
-		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<meta name="viewport" content="width=device-width, initial-scale=0.75, maximum-scale=4.0, user-scalable=yes" />
+		<link href="css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">-->
 		<style>
-			/*table {border-collapse: collapse;}
-			table, th, td {border: 1px solid black;}*/
-			td {min-width:30px;}
-			.primeNumCell {background-color: orange;}
+			td {min-width: 3em;padding-top: 2px; padding-bottom: 2px; padding-left: 0px; padding-right: 0px;}
+			.primeNumCell {background-color: lightskyblue;text-align: center}
+			.nonPrimeNumCell {text-align: center}
         </style>
-
 		<script>
 		"use strict";
 		var primeNumbers = [];
 		var maxValidBound = 10000;
 		
-        function isPrime(n){
+        function isPrimeSimple(n){
+			if(Number.isNaN(n) || n<1 ) {return false;}
+			var i;
+            for(i=2;i<n;i++){
+                if(n%i==0){
+                    return false;
+                }
+            }
+            return true;
+        }
+		function isPrimeOpt(n){
 			if(Number.isNaN(n) || n<1 ) {return false;}
 			var i;
             for(i=2;i<n;i++){
@@ -26,8 +35,8 @@
                 }
             }
 			primeNumbers.push(n);
-            return true;
-        }
+            return true;			
+		}
 		
         function engage(){
 			//document.getElementById('outDiv').innerHTML ='<img src="ajax-loader.gif" alt="activity indicator">';
@@ -35,19 +44,21 @@
 			var output = "<table class='table-bordered'><tr>";
 			var j;
 			if(maxBoundVal>maxValidBound){
-				document.getElementById('outDiv').innerHTML = "Zahl ist zu groß!";
+				document.getElementById('outDiv').innerHTML = "Zahl ist zu groß! Maximal "+maxValidBound+" erlaubt!";
+				document.getElementById('maxBound').value = maxValidBound;
 				return;
 			}
 			if(maxBoundVal<1){
 				document.getElementById('outDiv').innerHTML = "Zahl ist zu klein!";
+				document.getElementById('maxBound').value = 100;
 				return;
 			}
             for(j=1;j<=maxBoundVal;j++){
-                if(isPrime(j)){
+                if(isPrimeSimple(j)){
 					output+="<td class='primeNumCell'>";
                 }
 				else{
-					output+="<td>";
+					output+="<td class='nonPrimeNumCell'>";
 				}
 				output+=j+"</td>"
                 if(j%10==0){
@@ -62,7 +73,6 @@
 			document.getElementById('outDiv').innerHTML = "";
 		}
 		</script>
-		
     </head>
 	<body onload="">
 		<div>
@@ -72,9 +82,16 @@
 				</div>
 			
 				<div class="container">
-					Berechne Primzahlen bis: <input id="maxBound" min="1" max="10000" value="100">
-				<button id="engage" class="btn btn-primary" onclick="engage()">Energie!</button>
-				<button id="clear" class="btn btn-warning" onclick="clearDiv()">Ausgabe löschen</button>
+					Berechne Primzahlen bis:
+					<input id="maxBound" title="Bitte die größt mögliche Zahl eingeben!" 
+						value="100" type="number" min="1" max="10000" step="50" 
+						x-moz-errormessage="Falscher Wertebereich!" required>
+					<button id="engage" class="btn btn-primary" onclick="engage()" aria-label="Left Align">
+						<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+					</button>
+					<button id="clear" class="btn btn-warning" onclick="clearDiv()" aria-label="Left Align">
+						<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+					</button>
 				</div>
 			</div>
 			<div class="container text-left"
