--- a/primenumber/index.html
+++ b/primenumber/index.html
@@ -25,7 +25,7 @@
 				<div class="container">
 					Berechne Primzahlen bis:
 					<input id="maxBound" title="Bitte die größt mögliche Zahl eingeben!" 
-						value="100" type="number" min="1" max="10000" step="50" 
+						value="100" type="number" step="50" 
 						x-moz-errormessage="Falscher Wertebereich!" required>
 					<button id="engage" class="btn btn-primary" onclick="engage()" aria-label="Left Align">
 						<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
