--- a/multiweather/index.html
+++ b/multiweather/index.html
@@ -2,14 +2,14 @@
 <html lang="de">
     <head>
         <meta charset="utf-8">
-	    <title>Primzahlen</title>
+	    <title>Multi-Wetter</title>
 		<meta name="viewport" content="width=device-width, initial-scale=0.75, maximum-scale=4.0, user-scalable=yes" />
 		<link href="css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">-->
 		<style>
-			td {min-width: 3em;padding-top: 2px; padding-bottom: 2px; padding-left: 0px; padding-right: 0px;}
+			/*td {min-width: 3em;padding-top: 2px; padding-bottom: 2px; padding-left: 0px; padding-right: 0px;}
 			.primeNumCell {background-color: lightskyblue;text-align: center}
-			.nonPrimeNumCell {text-align: center}
+			.nonPrimeNumCell {text-align: center}*/
         </style>
 		<script src="./primenumber.js" type="text/javascript">
 		
@@ -19,10 +19,10 @@
 		<div>
 			<div class="jumbotron"> 
 				<div class="container text-left">
-				<h1>Primzahlenrechner</h1>
+				<h1>Andis Multiwetter Seite</h1>
 				</div>
 			
-				<div class="container">
+				<!--<div class="container">
 					Berechne Primzahlen bis:
 					<input id="maxBound" title="Bitte die größt mögliche Zahl eingeben!" 
 						value="100" type="number" step="50" 
@@ -33,11 +33,22 @@
 					<button id="clear" class="btn btn-warning" onclick="clearDiv()" aria-label="Left Align">
 						<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
 					</button>
-				</div>
+				</div>-->
 				
 			</div>
-			<div class="container text-left">
-				<div id="outDiv"></div>
+			<div class="" style="width: 100%">
+				<div class="row">
+					<!--<div class="col-sm-1"></div>-->
+					<div class="col-sm-5 col-md-3">
+						<iframe src="https://www.meteoblue.com/de/wetter/widget/daily/wien_%c3%96sterreich_2761369?geoloc=fixed&days=7&tempunit=CELSIUS&windunit=KILOMETER_PER_HOUR&coloured=coloured&pictoicon=1&maxtemperature=1&mintemperature=1&windspeed=1&precipitation=1&precipitationprobability=1&spot=1&layout=light"  frameborder="0" scrolling="NO" allowtransparency="true" sandbox="allow-same-origin allow-scripts allow-popups" style="width: 378px;height: 350px"></iframe>
+					</div>
+					<div class="col-sm-7 col-md-5">
+						<iframe src="https://www.wunderground.com/at/vienna#forecast"  frameborder="0" scrolling="NO" allowtransparency="true" sandbox="allow-same-origin allow-scripts allow-popups" style="width: 600px;height: 615px;top: -300px"></iframe>
+					</div>
+					<div class="col-sm-6 col-md-4">
+						<iframe src="http://www.bergfex.at/sommer/wien-stadt/wetter/#detail"  frameborder="0" scrolling="NO" allowtransparency="true" sandbox="allow-same-origin allow-scripts allow-popups" style="width: 500px;height: 700px;"></iframe>
+					</div>
+				</div>
 			</div>
 		</div>
 		
